--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
@@ -57,4 +58,5 @@
     </section>
   </body>
 </html>
+# css-exercise-one-update
 # css-exercise-one-update
