update html for checking

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <nav>
@@ -31,32 +31,21 @@
       </div>
       <div class="element">
         <h3>This is text for a div element</h3>
-        <style>
-           h3 {
-             background-color:blue
-           }
-        </style>
       </div>
-
       <div class="element">
         <h3>This is text for a div element</h3>
-        <style>
-           h3 {
-             background-color:red
-           }
-        </style>
       </div>
-
       <div class="element">
         <h3>This is text for a div element</h3>
-        <style>
-           h3 {
-             background-color:yellow
-           }
-        </style>
       </div>
+
+      <div class="color">
+        <h3>This is text for a div element</h3>
+      </div>
+
+      <div class="insert class name"> </div>
+
     </section>
   </body>
 </html>
-# css-exercise-one-update
 # css-exercise-one-update
