--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <div class="element">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="color">
         <h3>This is text for a div element</h3>
       </div>
-      <div class="element">
+      <div class="color">
         <h3>This is text for a div element</h3>
       </div>
 
@@ -43,7 +43,6 @@
         <h3>This is text for a div element</h3>
       </div>
 
-      <div class="insert class name"> </div>
 
     </section>
   </body>
